# figma-console-mcp

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  BROWSER_RENDERING_SETUP.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_SETUP.md  CLAUDE_HANDOFF.md  DEPLOYMENT.md  ENABLE_BROWSER_RENDERING.md  LOCAL_MODE_SETUP.md  MINTLIFY_ISSUES.md  README.md  RELEASE_NOTES.md  SECURITY.md  TROUBLESHOOTING.md  biome.json  d2c-coffee-product-page-research.md  docs.json  instructions.md  jest.config.cjs  jest.config.js  mint.json  package-lock.json  package.json  tsconfig.cloudflare.json  tsconfig.json  tsconfig.local.json  verify-phase3.sh  vite.config.ts  wrangler.jsonc
.claude/: claude.json  project-context.md  settings.local.json
.serena/: project.yml
claude-plugin/: README.md
docs/: AI-DECISION-MAKING-GUIDE.md  AI-QUICK-REFERENCE.md  ARCHITECTURE.md  CLAUDE_CODE_SETUP.md  CLAUDE_DESKTOP_SETUP_UPDATED.md  CONSOLE_EXTRACTION_IMPROVEMENTS.md  DEPLOYMENT_COMPARISON.md  DOM_BASED_VARIABLE_EXTRACTION_FEASIBILITY.md  DUAL_MODE_SETUP.md  FIGMA_API_SETUP.md  FIGMA_DESKTOP_API_SOLUTION.md  IMPLEMENTATION_COMPLETE.md  MODE_COMPARISON.md  NPX-INSTALLATION.md  OAUTH_IMPLEMENTATION.md  OAUTH_SETUP.md  PHASE3_SUMMARY.md  PHASE5_PLAN.md  PHASE5_TESTING.md  PRODUCT_PLAN.md  (+34 more)
figma-cli/: .env.example  Cargo.toml  README.md
figma-cli/src/: cli.rs  main.rs  output.rs
figma-cli/src/api/: client.rs  desktop.rs  figma.rs  mod.rs
figma-cli/src/commands/: comments.rs  components.rs  design_system.rs  desktop.rs  execute.rs  file.rs  init.rs  mod.rs  nodes.rs  styles.rs  variables.rs
(+181 files in other folders)
