[package]
name = "figma-cli"
version = "0.1.0"
edition = "2021"
description = "CLI analog of figma-console-mcp server"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
comfy-table = "7"
dotenv = "0.15"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
libc = "0.2"

[profile.release]
strip = true
opt-level = "s"
